fix: navbar and bookdemo overlap

--- a/amr_style.css
+++ b/amr_style.css
@@ -12,6 +12,7 @@ body {
     font-size: 4rem;
     font-weight: 600;
     color: rgb(24, 45, 107);
+    margin-top: 13rem;
     margin-bottom: 2rem;
 }
 
