--- a/mazen_style.css
+++ b/mazen_style.css
@@ -45,6 +45,7 @@
 	top: 0;
 	width: 100%;
 	background-color: white;
+	z-index: 10;
 }
 
 .mazen_navBarContainer {
